--- a/index.html
+++ b/index.html
@@ -2,14 +2,30 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title></title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <title>Title</title>
+
+  <!-- Latest compiled and minified CSS -->
+  <link
+  rel="stylesheet"
+  href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+  crossorigin="anonymous">
 
   <!-- Optional theme -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+  <link
+  rel="stylesheet"
+  href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp"
+  crossorigin="anonymous">
+
+  <!-- Jquery-3.3.1 -->
+  <script
+  src="https://code.jquery.com/jquery-3.3.1.min.js"
+  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+  crossorigin="anonymous"></script>
 
   <!-- Latest compiled and minified JavaScript -->
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+  <script
+  src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+  crossorigin="anonymous"></script>
 </head>
 <body>
   <style>
@@ -19,6 +35,11 @@
     margin-bottom: 0px;
     list-style: none;
     padding: 0px;
+  }
+
+
+  .grey {
+    background-color: #efefef;
   }
 
 
@@ -36,9 +57,9 @@
     margin-top: 30px;
     margin-bottom: 30px;
   }
-  a
+
   .container {
-    margin-bottom: 40px;
+    padding-bottom: 40px;
   }
 
   /* Home */
@@ -46,6 +67,7 @@
   #home {
     margin-top: 40px;
   }
+
   #home ul>li {
     margin-bottom: 10px;
     font-size:18px;
@@ -55,13 +77,11 @@
     margin-bottom: 0px;
   }
 
-
-
-  .greyContainer{
-    background-color: #efefef;
-    padding-bottom: 30px;
+  #map {
+    width: 100%;
+    height: 100%;
+    border: none;
   }
-
 
   /* List faculties */
 
@@ -72,7 +92,8 @@
   /* Rating */
 
   #Rating img {
-    width: 100%;
+    width: 95%;
+    height: auto;
   }
 
   #Rating ul>li {
@@ -80,6 +101,77 @@
   }
 
   #Rating ul>li:last-child {
+    margin-bottom: 0px;
+  }
+
+  .rating-item {
+    background: url("images/500X500.png") no-repeat left;
+    background-size: 15% auto;
+    padding-left: 17%;
+  }
+
+  /* Sales  */
+
+  #Sales>.container>.row:nth-child(2) {
+    margin-bottom: 7%;
+  }
+
+  .sale-description {
+    position: relative;
+    width: 340px;
+    text-align: center;
+    margin: auto;
+  }
+
+  .sale-description>h4 {
+    padding-top: 20px;
+    padding-bottom: 15px;
+    background: url("images/bg-for-furniture.png") no-repeat center;
+  }
+
+  .sale {
+    display: block;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
+    border: 1px solid #FF8000;
+    width: 340px;
+    height: 130px;
+    text-align: center;
+    margin: auto;
+  }
+
+  .sale>h3 {
+    margin: 0px;
+  }
+
+  .sale-badge {
+    position: relative;
+    background: #efefef;
+    width: 80%;
+    margin-left: 10%;
+    top: -20%;
+    font-size: 18px;
+  }
+
+  /* Who works */
+
+  #WhoWorks img {
+    width: 100%;
+  }
+
+  /* Gallery */
+
+  #Gallery img {
+    width: 100%;
+  }
+
+  /* Docs */
+  #Docs ul>li{
+    margin-bottom: 20px;
+  }
+
+  #Docs ul>li:last-child{
     margin-bottom: 0px;
   }
 
@@ -95,14 +187,15 @@
             <li><a href="#">Википедия о моджевского</a></li>
           </ul>
         </div>
-        <div class="col-md-7 forMap">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1323.7255187111605!2d35.03761317828425!3d48.428682611104676!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40dbfcb347737ead%3A0x125dda796521111c!2zU3R1ZGVudFdheSDQkNCz0LXQvdGC0YHRgtCy0L4g0L7QsdGA0LDQt9C-0LLQsNGC0LXQu9GM0L3Ri9GFINC_0YDQvtCz0YDQsNC80Lwg0JTQvdC10L_RgA!5e0!3m2!1sen!2sua!4v1519493603551" id="map" width="100%" height="100%" frameborder="0" style="border:0" allowfullscreen></iframe>
+        <div class="col-md-7">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1323.7255187111605!2d35.03761317828425!3d48.428682611104676!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40dbfcb347737ead%3A0x125dda796521111c!2zU3R1ZGVudFdheSDQkNCz0LXQvdGC0YHRgtCy0L4g0L7QsdGA0LDQt9C-0LLQsNGC0LXQu9GM0L3Ri9GFINC_0YDQvtCz0YDQsNC80Lwg0JTQvdC10L_RgA!5e0!3m2!1sen!2sua!4v1519493603551"
+          id="map" style="border:0" allowfullscreen></iframe>
         </div>
       </div>
     </div>
   </div>
 
-  <div id="listFaculties" class = "greyContainer">
+  <div id="listFaculties" class = "grey">
     <div class="container">
       <div class="row">
         <div class="col-md-10 col-md-offset-1"><h2 class="headerTitle">Перечень факультетов</h2></div>
@@ -154,16 +247,16 @@
         </div>
         <div class="col-md-5">
           <ul>
-            <li>
+            <li class="rating-item">
               <b>Рейтинг 1.</b>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro necessitatibus numquam magnam perferendis velit repellat alias suscipit, error illo facere!
             </li>
-            <li>
-              <b>Рейтинг 2</b>
+            <li class="rating-item">
+              <b>Рейтинг 2.</b>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro necessitatibus numquam magnam perferendis velit repellat alias suscipit, error illo facere!
             </li>
-            <li>
-              <b>Рейтинг 3</b>
+            <li class="rating-item">
+              <b>Рейтинг 3.</b>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro necessitatibus numquam magnam perferendis velit repellat alias suscipit, error illo facere!
             </li>
           </ul>
@@ -173,15 +266,190 @@
     </div>
   </div>
 
-  <div id="Sales" class="greyContainer">
+  <div id="Sales" class="grey">
     <div class="container">
       <div class="row">
         <div class="col-md-10 col-md-offset-1">
           <h2 class="headerTitle">Акции и подарки для наших клиентов</h2>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-5 col-md-offset-6">
+          <div class="sale-description">
+            <h3>Lorem ipsum</h3>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora tenetur nesciunt illo provident, a ad reprehenderit rerum repellat sapiente mollitia!
           </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-5 col-md-offset-1">
+          <div class="sale">
+            <div class="sale-badge">Lorem ipsum dolor sit amet, consectetur adipisicing elit</div>
+            <h3>50 &euro;</h3>
+          </div>
+        </div>
       </div>
     </div>
   </div>
+
+  <div id="WhoWorks">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-10 col-md-offset-1 headerTitle">
+          <h2>Кто работает с Вами</h2>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-10 col-md-offset-1">
+          <div class="row">
+            <div class="col-md-3 text-center">
+              <img src="images/400X500.png" alt="img">
+              <h3>Lorem</h3>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. In aperiam explicabo necessitatibus obcaecati laboriosam quaerat expedita dolore repellendus.
+            </div>
+            <div class="col-md-3 text-center">
+              <img src="images/400X500.png" alt="img">
+              <h3>Lorem</h3>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. In aperiam explicabo necessitatibus obcaecati laboriosam quaerat expedita dolore repellendus.
+            </div>
+            <div class="col-md-3 text-center">
+              <img src="images/400X500.png" alt="img">
+              <h3>Lorem</h3>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. In aperiam explicabo necessitatibus obcaecati laboriosam quaerat expedita dolore repellendus.
+            </div>
+            <div class="col-md-3 text-center">
+              <img src="images/400X500.png" alt="img">
+              <h3>Lorem</h3>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. In aperiam explicabo necessitatibus obcaecati laboriosam quaerat expedita dolore repellendus.
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div id="Gallery" class="grey">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-10 col-md-offset-1">
+          <h2 class="headerTitle">Галерея</h2>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-10 col-md-offset-1">
+          <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+            <!-- Indicators -->
+            <ol class="carousel-indicators">
+              <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+              <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+              <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+            </ol>
+
+            <!-- Wrapper for slides -->
+            <div class="carousel-inner" role="listbox">
+              <div class="item active">
+                <img src="images/for-carousel.png" alt="img">
+                <div class="carousel-caption">
+                  <h4>Lorem ipsum dolor sit</h4>
+                </div>
+              </div>
+              <div class="item">
+                <img src="images/for-carousel.png" alt="img">
+                <div class="carousel-caption">
+                  <h4>Lorem ipsum dolor sit</h4>
+                </div>
+              </div>
+            </div>
+
+            <!-- Controls -->
+            <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+              <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+              <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div id="Cost">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-10 col-md-offset-1">
+          <h2 class="headerTitle">
+            Стоимость обучения на факультетах и специализация
+          </h2>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-10 col-md-offset-1">
+          <table class="table table-bordered">
+            <tr>
+              <th><h4>Факультет</h4></th>
+              <th><h4>Цена</h4></th>
+            </tr>
+            <tr class="active">
+              <td>Журналистика</td>
+              <td>3000 Евро/год</td>
+            </tr>
+            <tr>
+              <td>Информатика</td>
+              <td>3300 Евро/год</td>
+            </tr>
+            <tr class="active">
+              <td>Филология</td>
+              <td>2000-2750 Евро/год</td>
+            </tr>
+            <tr>
+              <td>Управление</td>
+              <td>3000 Евро/год</td>
+            </tr>
+          </table>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div id="Docs" class="grey">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-10 col-md-offset-1">
+          <h2 class="headerTitle">Документы для поступления</h2>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-10 col-md-offset-1">
+          <ul>
+            <li>
+              <h4><b>1. Lorem ipsum</b></<h4></h4>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita est, repudiandae reiciendis laboriosam voluptas eligendi corrupti tempore perspiciatis quaerat, excepturi fugit harum ipsum. Quam harum, nostrum eius sed excepturi amet?
+            </li>
+            <li>
+              <h4><b>2. Dolor sit</b></<h4></h4>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo magni asperiores ipsum hic, ex itaque debitis! Eveniet odio aspernatur consequatur, cupiditate impedit libero eaque facilis ipsum commodi, similique ex corrupti suscipit. Molestiae dolorum temporibus hic, accusamus laudantium tempore possimus cum.
+            </li>
+            <li>
+              <h4><b>3. Lorem ipsum</b></<h4></h4>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita est, repudiandae reiciendis laboriosam voluptas eligendi corrupti tempore perspiciatis quaerat, excepturi fugit harum ipsum. Quam harum, nostrum eius sed excepturi amet?
+            </li>
+            <li>
+              <h4><b>4. Dolor sit</b></<h4></h4>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo magni asperiores ipsum hic, ex itaque debitis! Eveniet odio aspernatur consequatur, cupiditate impedit libero eaque facilis ipsum commodi, similique ex corrupti suscipit. Molestiae dolorum temporibus hic, accusamus laudantium tempore possimus cum.
+            </li>
+            <li>
+              <h4><b>5. Lorem ipsum</b></<h4></h4>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita est, repudiandae reiciendis laboriosam voluptas eligendi corrupti tempore perspiciatis quaerat, excepturi fugit harum ipsum. Quam harum, nostrum eius sed excepturi amet?
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+
 
 </body>
 </html>
