--- a/index.html
+++ b/index.html
@@ -243,7 +243,9 @@
   <div id="listFaculties" class = "grey">
     <div class="container">
       <div class="row">
-        <div class="col-md-10 col-md-offset-1"><h2 class="header-title">Перечень факультетов</h2></div>
+        <div class="col-md-10 col-md-offset-1">
+          <h2 class="header-title">Перечень факультетов</h2>
+        </div>
       </div>
       <div class="row">
         <div class="col-md-2 col-md-offset-1 text-center">
@@ -284,7 +286,9 @@
   <div id="rating">
     <div class="container">
       <div class="row">
-        <div class="col-md-10 col-md-offset-1"><h2 class="header-title">Рейтинги</h2></div>
+        <div class="col-md-10 col-md-offset-1">
+          <h2 class="header-title">Рейтинги</h2>
+        </div>
       </div>
       <div class="row flexbox-wrapper">
         <div class="col-md-5 col-md-offset-1">
@@ -328,7 +332,9 @@
       <div class="row">
         <div class="col-md-5 col-md-offset-1">
           <div class="sale">
-            <div class="sale-badge">Lorem ipsum dolor sit amet, consectetur adipisicing elit</div>
+            <div class="sale-badge">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit
+            </div>
             <h3>50 &euro;</h3>
           </div>
         </div>
@@ -381,10 +387,12 @@
       </div>
       <div class="row">
         <div class="col-md-10 col-md-offset-1">
-          <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+          <div id="carousel-example-generic" class="carousel slide"
+          data-ride="carousel">
             <!-- Indicators -->
             <ol class="carousel-indicators">
-              <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+              <li data-target="#carousel-example-generic" data-slide-to="0"
+              class="active"></li>
               <li data-target="#carousel-example-generic" data-slide-to="1"></li>
               <li data-target="#carousel-example-generic" data-slide-to="2"></li>
             </ol>
@@ -406,12 +414,16 @@
             </div>
 
             <!-- Controls -->
-            <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-              <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+            <a class="left carousel-control" href="#carousel-example-generic"
+            role="button" data-slide="prev">
+              <span class="glyphicon glyphicon-chevron-left"
+              aria-hidden="true"></span>
               <span class="sr-only">Previous</span>
             </a>
-            <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-              <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+            <a class="right carousel-control" href="#carousel-example-generic"
+            role="button" data-slide="next">
+              <span class="glyphicon glyphicon-chevron-right"
+              aria-hidden="true"></span>
               <span class="sr-only">Next</span>
             </a>
           </div>
@@ -636,11 +648,13 @@
       </div>
       <div class="row">
         <div class="col-md-5 col-md-offset-1">
-          <iframe class="frame frame-univer" src="https://www.youtube.com/embed/C0DPdy98e4c"
+          <iframe class="frame frame-univer"
+          src="https://www.youtube.com/embed/C0DPdy98e4c"
           allowfullscreen></iframe>
         </div>
         <div class="col-md-5 ">
-          <iframe class="frame frame-univer" src="https://www.youtube.com/embed/C0DPdy98e4c"
+          <iframe class="frame frame-univer"
+          src="https://www.youtube.com/embed/C0DPdy98e4c"
           allowfullscreen></iframe>
         </div>
       </div>
@@ -658,15 +672,18 @@
         <div class="col-md-10 col-md-offset-1">
           <div class="row">
             <div class="col-md-4">
-              <iframe class="frame  frame-review" src="https://www.youtube.com/embed/C0DPdy98e4c"
+              <iframe class="frame  frame-review"
+              src="https://www.youtube.com/embed/C0DPdy98e4c"
               allowfullscreen></iframe>
             </div>
             <div class="col-md-4">
-              <iframe class="frame  frame-review" src="https://www.youtube.com/embed/C0DPdy98e4c"
+              <iframe class="frame  frame-review"
+              src="https://www.youtube.com/embed/C0DPdy98e4c"
               allowfullscreen></iframe>
             </div>
             <div class="col-md-4">
-              <iframe class="frame frame-review" src="https://www.youtube.com/embed/C0DPdy98e4c"
+              <iframe class="frame frame-review"
+              src="https://www.youtube.com/embed/C0DPdy98e4c"
               allowfullscreen></iframe>
             </div>
           </div>
@@ -735,7 +752,9 @@
     <div class="container">
       <div class="row">
         <div class="col-md-10 col-md-offset-1">
-          <h2 class="header-title">Почему нас рекомендуют?   12 наших преимуществ</h2>
+          <h2 class="header-title">
+            Почему нас рекомендуют?   12 наших преимуществ
+          </h2>
         </div>
       </div>
       <div class="row">
