--- a/index.html
+++ b/index.html
@@ -46,31 +46,36 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-xs-8 col-xs-offset-2 col-sm-6 col-sm-offset-0 col-md-2 col-md-offset-1 text-center faculty">
+      <div class="col-xs-8 col-xs-offset-2 col-sm-6 col-sm-offset-0 col-md-2
+      col-md-offset-1 text-center faculty">
         <img src="images/500X500.png" alt="img">
         <h4>Заголовок</h4>
         <p>описание</p>
         <a href="#">Подробнее</a>
       </div>
-      <div class="col-xs-8 col-xs-offset-2 col-sm-6 col-sm-offset-0 col-md-2 text-center faculty">
+      <div class="col-xs-8 col-xs-offset-2 col-sm-6 col-sm-offset-0 col-md-2
+      text-center faculty">
         <img src="images/500X500.png" alt="img">
         <h4>Заголовок</h4>
         <p>описание</p>
         <a href="#">Подробнее</a>
       </div>
-      <div class="col-xs-8 col-xs-offset-2 col-sm-6 col-sm-offset-0 col-md-2 text-center faculty">
+      <div class="col-xs-8 col-xs-offset-2 col-sm-6 col-sm-offset-0 col-md-2
+      text-center faculty">
         <img src="images/500X500.png" alt="img">
         <h4>Заголовок</h4>
         <p>описание</p>
         <a href="#">Подробнее</a>
       </div>
-      <div class="col-xs-8 col-xs-offset-2 col-sm-6 col-sm-offset-0 col-md-2 text-center faculty">
+      <div class="col-xs-8 col-xs-offset-2 col-sm-6 col-sm-offset-0 col-md-2
+      text-center faculty">
         <img src="images/500X500.png" alt="img">
         <h4>Заголовок</h4>
         <p>описание</p>
         <a href="#">Подробнее</a>
       </div>
-      <div class="col-xs-8 col-xs-offset-2 col-sm-6 col-sm-offset-0 col-md-2 text-center faculty">
+      <div class="col-xs-8 col-xs-offset-2 col-sm-6 col-sm-offset-0 col-md-2
+      text-center faculty">
         <img src="images/500X500.png" alt="img">
         <h4>Заголовок</h4>
         <p>описание</p>
@@ -84,12 +89,14 @@
 <div id="rating">
   <div class="container">
     <div class="row">
-      <div class="col-xs-12 col-xs-offset-0 col-sm-10 col-sm-offset-1 col-md-10 col-md-offset-1">
+      <div class="col-xs-12 col-xs-offset-0 col-sm-10 col-sm-offset-1 col-md-10
+      col-md-offset-1">
         <h2 class="header-title">Рейтинги</h2>
       </div>
     </div>
     <div class="row flexbox-wrapper">
-      <div class="col-xs-12 col-xs-offset-0 col-sm-10 col-sm-offset-1 col-md-5 col-md-offset-1">
+      <div class="col-xs-12 col-xs-offset-0 col-sm-10 col-sm-offset-1 col-md-5
+      col-md-offset-1">
         <img class="office" src="images/500X300.png" alt="img">
       </div>
       <div class="col-xs-12 col-xs-offset-0 col-sm-10 col-sm-offset-1 col-md-5">
@@ -115,7 +122,8 @@
 <div id="sales" class="grey">
   <div class="container">
     <div class="row">
-      <div class="col-xs-12 col-xs-offset-0 col-sm-10 col-sm-offset-1 col-md-10 col-md-offset-1">
+      <div class="col-xs-12 col-xs-offset-0 col-sm-10 col-sm-offset-1 col-md-10
+      col-md-offset-1">
         <h2 class="header-title">Акции и подарки для наших клиентов</h2>
       </div>
     </div>
@@ -127,7 +135,8 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-xs-8 col-xs-offset-2 col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4">
+    <div class="col-xs-8 col-xs-offset-2 col-sm-6 col-sm-offset-3 col-md-4
+    col-md-offset-4">
       <div class="sale">
         <div class="sale-badge">
           Lorem ipsum dolor sit amet, consectetur
@@ -142,29 +151,35 @@
 <div id="whoWorks">
   <div class="container">
     <div class="row">
-      <div class="col-xs-12 col-xs-offset-0 col-sm-10 col-sm-offset-1 col-md-10 col-md-offset-1">
+      <div class="col-xs-12 col-xs-offset-0 col-sm-10 col-sm-offset-1 col-md-10
+      col-md-offset-1">
         <h2 class="header-title">Кто работает с Вами</h2>
       </div>
     </div>
     <div class="row">
-      <div class="col-xs-12 col-xs-offset-0 col-sm-10 col-sm-offset-1 col-md-10 col-md-offset-1">
+      <div class="col-xs-12 col-xs-offset-0 col-sm-10 col-sm-offset-1 col-md-10
+      col-md-offset-1">
         <div class="row">
-          <div class="col-xs-8 col-xs-offset-2 col-sm-6 col-sm-offset-0 col-md-3 text-center worker">
+          <div class="col-xs-8 col-xs-offset-2 col-sm-6 col-sm-offset-0 col-md-3
+          text-center worker">
             <img src="images/400X500.png" alt="img">
             <h3>Lorem</h3>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. In aperiam explicabo necessitatibus obcaecati laboriosam quaerat expedita dolore repellendus.
           </div>
-          <div class="col-xs-8 col-xs-offset-2 col-sm-6 col-sm-offset-0 col-md-3 text-center worker">
+          <div class="col-xs-8 col-xs-offset-2 col-sm-6 col-sm-offset-0 col-md-3
+          text-center worker">
             <img src="images/400X500.png" alt="img">
             <h3>Lorem</h3>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. In aperiam explicabo necessitatibus obcaecati laboriosam quaerat expedita dolore repellendus.
           </div>
-          <div class="col-xs-8 col-xs-offset-2 col-sm-6 col-sm-offset-0 col-md-3 text-center worker">
+          <div class="col-xs-8 col-xs-offset-2 col-sm-6 col-sm-offset-0 col-md-3
+          text-center worker">
             <img src="images/400X500.png" alt="img">
             <h3>Lorem</h3>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. In aperiam explicabo necessitatibus obcaecati laboriosam quaerat expedita dolore repellendus.
           </div>
-          <div class="col-xs-8 col-xs-offset-2 col-sm-6 col-sm-offset-0 col-md-3 text-center worker">
+          <div class="col-xs-8 col-xs-offset-2 col-sm-6 col-sm-offset-0 col-md-3
+          text-center worker">
             <img src="images/400X500.png" alt="img">
             <h3>Lorem</h3>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. In aperiam explicabo necessitatibus obcaecati laboriosam quaerat expedita dolore repellendus.
@@ -178,16 +193,19 @@
 <div id="gallery" class="grey">
   <div class="container">
     <div class="row">
-      <div class="col-xs-12 col-xs-offset-0 col-sm-10 col-sm-offset-1 col-md-10 col-md-offset-1">
+      <div class="col-xs-12 col-xs-offset-0 col-sm-10 col-sm-offset-1 col-md-10
+      col-md-offset-1">
         <h2 class="header-title">Галерея</h2>
       </div>
     </div>
     <div class="row">
-      <div class="col-xs-12 col-xs-offset-0 col-sm-10 col-sm-offset-1 col-md-10 col-md-offset-1">
+      <div class="col-xs-12 col-xs-offset-0 col-sm-10 col-sm-offset-1 col-md-10
+      col-md-offset-1">
 
         <!-- Hidden on small screens  -->
 
-        <div id="carousel-example-generic" class="carousel slide hidden-xs" data-ride="carousel">
+        <div id="carousel-example-generic" class="carousel slide hidden-xs"
+        data-ride="carousel">
           <!-- Indicators -->
           <ol class="carousel-indicators">
             <li data-target="#carousel-example-generic" data-slide-to="0"
@@ -213,12 +231,16 @@
           </div>
 
           <!-- Controls -->
-          <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+          <a class="left carousel-control" href="#carousel-example-generic"
+          role="button" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true">
+            </span>
             <span class="sr-only">Previous</span>
           </a>
-          <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+          <a class="right carousel-control" href="#carousel-example-generic"
+          role="button" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true">
+            </span>
             <span class="sr-only">Next</span>
           </a>
         </div>
@@ -258,14 +280,16 @@
 <div id="cost">
   <div class="container">
     <div class="row">
-      <div class="col-xs-12 col-xs-offset-0 col-sm-10 col-sm-offset-1 col-md-10 col-md-offset-1">
+      <div class="col-xs-12 col-xs-offset-0 col-sm-10 col-sm-offset-1 col-md-10
+       col-md-offset-1">
         <h2 class="header-title">
           Стоимость обучения на факультетах и специализация
         </h2>
       </div>
     </div>
     <div class="row">
-      <div class="col-xs-12 col-xs-offset-0 col-md-10 col-md-offset-1 col-md-10 col-md-offset-1">
+      <div class="col-xs-12 col-xs-offset-0 col-md-10 col-md-offset-1 col-md-10
+      col-md-offset-1">
         <table class="table table-bordered">
           <tr class="active">
             <th>Факультет</th>
@@ -296,12 +320,14 @@
 <div id="docs" class="grey">
   <div class="container">
     <div class="row">
-      <div class="col-xs-12 col-xs-offset-0 col-sm-10 col-sm-offset-1 col-md-10 col-md-offset-1">
+      <div class="col-xs-12 col-xs-offset-0 col-sm-10 col-sm-offset-1 col-md-10
+      col-md-offset-1">
         <h2 class="header-title">Документы для поступления</h2>
       </div>
     </div>
     <div class="row">
-      <div class="col-xs-12 col-xs-offset-0 col-sm-10 col-sm-offset-1 col-md-10 col-md-offset-1">
+      <div class="col-xs-12 col-xs-offset-0 col-sm-10 col-sm-offset-1 col-md-10
+      col-md-offset-1">
         <ul>
           <li>
             <h4><b>1. Lorem ipsum</b></h4>
@@ -332,12 +358,14 @@
 <div id="weKnow">
   <div class="container">
     <div class="row">
-      <div class="col-xs-12 col-xs-offset-0 col-sm-10 col-sm-offset-1 col-md-10 col-md-offset-1">
+      <div class="col-xs-12 col-xs-offset-0 col-sm-10 col-sm-offset-1 col-md-10
+      col-md-offset-1">
         <h2 class="header-title">Мы знаем всё о поступлении в КАН</h2>
       </div>
     </div>
     <div class="row">
-      <div class="col-xs-12 col-xs-offset-0 col-sm-10 col-sm-offset-1 col-md-10 col-md-offset-1">
+      <div class="col-xs-12 col-xs-offset-0 col-sm-10 col-sm-offset-1 col-md-10
+      col-md-offset-1">
         <ul>
           <li>
             <h4><b>1. Lorem ipsum</b></h4>
@@ -368,12 +396,14 @@
 <div id="whatKnow" class="">
   <div class="container">
     <div class="row">
-      <div class="col-xs-12 col-xs-offset-0 col-sm-10 col-sm-offset-1 col-md-10 col-md-offset-1 text-center">
+      <div class="col-xs-12 col-xs-offset-0 col-sm-10 col-sm-offset-1 col-md-10
+      col-md-offset-1 text-center">
         <h2 class="header-title bg-line">Что нужно знать поступающему</h2>
       </div>
     </div>
     <div class="row">
-      <div class="col-xs-12 col-xs-offset-0 col-sm-10 col-sm-offset-1 col-md-10 col-md-offset-1">
+      <div class="col-xs-12 col-xs-offset-0 col-sm-10 col-sm-offset-1 col-md-10
+       col-md-offset-1">
         <ul>
           <li>
             <b>a)</b>
@@ -391,12 +421,14 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-xs-12 col-xs-offset-0 col-sm-10 col-sm-offset-1 col-md-10 col-md-offset-1 text-center">
+      <div class="col-xs-12 col-xs-offset-0 col-sm-10 col-sm-offset-1 col-md-10
+      col-md-offset-1 text-center">
         <h2 class="header-title bg-line">Магистратура</h2>
       </div>
     </div>
     <div class="row">
-      <div class="col-xs-12 col-xs-offset-0 col-sm-10 col-sm-offset-1 col-md-10 col-md-offset-1">
+      <div class="col-xs-12 col-xs-offset-0 col-sm-10 col-sm-offset-1 col-md-10
+      col-md-offset-1">
         <ul>
           <li>
             <b>a)</b>
@@ -414,12 +446,14 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-xs-12 col-xs-offset-0 col-sm-10 col-sm-offset-1 col-md-10 col-md-offset-1 text-center">
+      <div class="col-xs-12 col-xs-offset-0 col-sm-10 col-sm-offset-1 col-md-10
+      col-md-offset-1 text-center">
         <h2 class="header-title bg-line">Обучение на английском</h2>
       </div>
     </div>
     <div class="row">
-      <div class="col-xs-12 col-xs-offset-0 col-sm-10 col-sm-offset-1 col-md-10 col-md-offset-1">
+      <div class="col-xs-12 col-xs-offset-0 col-sm-10 col-sm-offset-1 col-md-10
+      col-md-offset-1">
         <ul>
           <li>
             <b>a)</b>
@@ -437,12 +471,14 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-xs-12 col-xs-offset-0 col-sm-10 col-sm-offset-1 col-md-10 col-md-offset-1 text-center">
+      <div class="col-xs-12 col-xs-offset-0 col-sm-10 col-sm-offset-1 col-md-10
+      col-md-offset-1 text-center">
         <h2 class="header-title bg-line">Общежитие</h2>
       </div>
     </div>
     <div class="row">
-      <div class="col-xs-12 col-xs-offset-0 col-sm-10 col-sm-offset-1 col-md-10 col-md-offset-1">
+      <div class="col-xs-12 col-xs-offset-0 col-sm-10 col-sm-offset-1 col-md-10
+      col-md-offset-1">
         <ul>
           <li>
             <b>a)</b>
@@ -465,12 +501,14 @@
 <div id="videoUniver" class="grey">
   <div class="container">
     <div class="row">
-      <div class="col-xs-12 col-xs-offset-0 col-sm-10 col-sm-offset-1 col-md-10 col-md-offset-1">
+      <div class="col-xs-12 col-xs-offset-0 col-sm-10 col-sm-offset-1 col-md-10
+      col-md-offset-1">
         <h2 class="header-title">Видео об университете</h2>
       </div>
     </div>
     <div class="row video-container">
-      <div class="col-xs-12 col-xs-offset-0 col-sm-5 col-sm-offset-1 col-md-5 col-md-offset-1">
+      <div class="col-xs-12 col-xs-offset-0 col-sm-5 col-sm-offset-1 col-md-5
+      col-md-offset-1">
         <div class="embed-responsive embed-responsive-4by3">
           <iframe class="frame frame-univer embed-responsive-item"
           src="https://www.youtube.com/embed/C0DPdy98e4c"
@@ -491,12 +529,14 @@
 <div id="reviews">
   <div class="container">
     <div class="row">
-      <div class="col-xs-12 col-xs-offset-0 col-sm-10 col-sm-offset-1 col-md-10 col-md-offset-1">
+      <div class="col-xs-12 col-xs-offset-0 col-sm-10 col-sm-offset-1 col-md-10
+      col-md-offset-1">
         <h2 class="header-title">Отзывы</h2>
       </div>
     </div>
     <div class="row">
-      <div class="col-xs-12 col-xs-offset-0 col-sm-10 col-sm-offset-1 col-md-10 col-md-offset-1">
+      <div class="col-xs-12 col-xs-offset-0 col-sm-10 col-sm-offset-1 col-md-10
+      col-md-offset-1">
         <div class="row video-container">
           <div class="col-xs-12 col-sm-6 col-md-4">
             <div class="embed-responsive embed-responsive-4by3">
@@ -528,12 +568,14 @@
 <div id="why" class="grey">
   <div class="container">
     <div class="row">
-      <div class="col-xs-12 col-xs-offset-0 col-sm-10 col-sm-offset-1 col-md-10 col-md-offset-1">
+      <div class="col-xs-12 col-xs-offset-0 col-sm-10 col-sm-offset-1 col-md-10
+      col-md-offset-1">
         <h2 class="header-title">Почему у всех разные цены?</h2>
       </div>
     </div>
     <div class="row">
-      <div class="col-xs-12 col-xs-offset-0 col-sm-10 col-sm-offset-1 col-md-10 col-md-offset-1">
+      <div class="col-xs-12 col-xs-offset-0 col-sm-10 col-sm-offset-1 col-md-10
+      col-md-offset-1">
         <h4><b>Почему у всех разные цены на поступление?</b></h4>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
         <br>
@@ -557,12 +599,14 @@
 <div id="guarantees">
   <div class="container">
     <div class="row">
-      <div class="col-xs-12 col-xs-offset-0 col-sm-10 col-sm-offset-1 col-md-10 col-md-offset-1">
+      <div class="col-xs-12 col-xs-offset-0 col-sm-10 col-sm-offset-1 col-md-10
+      col-md-offset-1">
         <h2 class="header-title">Гарантии и сертификаты</h2>
       </div>
     </div>
     <div class="row">
-      <div class="col-xs-12 col-xs-offset-0 col-sm-10 col-sm-offset-1 col-md-10 col-md-offset-1">
+      <div class="col-xs-12 col-xs-offset-0 col-sm-10 col-sm-offset-1 col-md-10
+      col-md-offset-1">
         <div class="row">
           <div class="col-xs-12 col-sm-12 col-md-6">
             <ul>
@@ -604,14 +648,16 @@
 <div id="whyRecomend" class="grey">
   <div class="container">
     <div class="row">
-      <div class="col-xs-12 col-xs-offset-0 col-sm-10 col-sm-offset-1 col-md-10 col-md-offset-1">
+      <div class="col-xs-12 col-xs-offset-0 col-sm-10 col-sm-offset-1 col-md-10
+      col-md-offset-1">
         <h2 class="header-title">
           Почему нас рекомендуют?   12 наших преимуществ
         </h2>
       </div>
     </div>
     <div class="row explain-why">
-      <div class="col-xs-12 col-xs-offset-0 col-sm-5 col-sm-offset-1 col-md-5 col-md-offset-1">
+      <div class="col-xs-12 col-xs-offset-0 col-sm-5 col-sm-offset-1 col-md-5
+      col-md-offset-1">
         <ul>
           <li>
             <b>1.</b>
@@ -669,7 +715,8 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-5 col-md-offset-1 frame-container">
+      <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-5 col-md-offset-1
+      frame-container">
         <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Ffacebook&tabs&width=320&height=154&small_header=true&adapt_container_width=true&hide_cover=false&show_facepile=true&appId"
         class="frame facebook-frame"></iframe>
       </div>
@@ -680,12 +727,14 @@
 <div id="actions">
   <div class="container">
     <div class="row">
-      <div class="col-xs-12 col-xs-offset-0 col-sm-10 col-sm-offset-1 col-md-10 col-md-offset-1 text-center">
+      <div class="col-xs-12 col-xs-offset-0 col-sm-10 col-sm-offset-1 col-md-10
+      col-md-offset-1 text-center">
         <h3 class="header-title">Выберите необходимое действие:</h3>
       </div>
     </div>
     <div class="row">
-      <div class="col-xs-8 col-xs-offset-2 col-sm-8 col-sm-offset-2 col-md-8 col-md-offset-2">
+      <div class="col-xs-8 col-xs-offset-2 col-sm-8 col-sm-offset-2 col-md-8
+      col-md-offset-2">
         <div class="row actions-container">
           <div class="col-xs-12 col-xs-offset-0 col-sm-6 col-md-5 text-center">
             <img src="images/500X500.png" alt="img">
@@ -694,7 +743,8 @@
             </a>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit.
           </div>
-          <div class="col-xs-12 col-xs-offset-0 col-sm-6 col-sm-offset-0 col-md-5 col-md-offset-2 text-center">
+          <div class="col-xs-12 col-xs-offset-0 col-sm-6 col-sm-offset-0 col-md-5
+          col-md-offset-2 text-center">
             <img src="images/500X500.png" alt="img">
             <a href="#" class="btn btn-default btn-lg">
               Получить скидку
